--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fm-tech-website",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@testing-library/jest-dom": "^6.6.3",
